--- a/foundations/01-css-methods/styles.css
+++ b/foundations/01-css-methods/styles.css
@@ -2,5 +2,6 @@ div {
     color: white; 
     background-color: red;
     font-weight: bold;
-    font-size: 48px;
+    font-size: 32px;
+    text-align: center;
 }
