Finished 03-Grouping-Selectors, fixed a few syntax issues regarding font-family in 01 and 02.

--- a/foundations/02-class-id-selectors/style.css
+++ b/foundations/02-class-id-selectors/style.css
@@ -1,11 +1,9 @@
 .class {
     background-color:indianred;
-    font-family:"Verdana", "dejaVu Sans", sans-serif;
+    font-family: Verdana, "dejaVu Sans", sans-serif;
 }
 
-.cool.class{
-    background-color:indianred;
-    font-family:"Verdana", "dejaVu Sans", sans-serif;
+.cool{
     font-size: 24px;
 }
 
